new stats api methods
