# api/urls.py
@@ -2,7 +2,7 @@ __author__ = 'felix.shaw@tgac.ac.uk - 20/01/2016'
 
 from .annotate_views import search_all, post_annotations, handle_upload
 from django.urls import path, re_path
-from .handlers import sample, person, general
+from .handlers import sample, person, general, stats
 from django.shortcuts import redirect
 
 app_name = 'api'
@@ -40,4 +40,11 @@ dtol_api_patterns = [
             name='get_study_from_sample_accession'),
 ]
 
-urlpatterns = generic_api_patterns + dtol_api_patterns
+stats_api_patterns = [
+    re_path(r'stats/number_of_users', stats.get_number_of_users,
+            name='get_number_of_users'),
+    re_path(r'stats/number_of_dtol_samples', stats.get_number_of_dtol_samples,
+            name='get_number_of_dtol_samples'),
+]
+
+urlpatterns = generic_api_patterns + dtol_api_patterns + stats_api_patterns
